// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metrics renders correctly with negative metric change 1`] = `
<div>
  <div
    border-radius="8px"
    class="css-vi7wl0"
  >
    <div
      class="chakra-stack css-1a8w4xd"
    >
      <div
        class="chakra-stack css-84zodg"
      >
        <p
          class="chakra-text css-0"
        >
          Revenue
        </p>
      </div>
      <svg
        class="chakra-icon chakra-icon css-1gg9e9r"
        focusable="false"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.0001 10.8333C10.4603 10.8333 10.8334 10.4602 10.8334 9.99998C10.8334 9.53974 10.4603 9.16665 10.0001 9.16665C9.53984 9.16665 9.16675 9.53974 9.16675 9.99998C9.16675 10.4602 9.53984 10.8333 10.0001 10.8333Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.66667"
        />
        <path
          d="M10.0001 4.99998C10.4603 4.99998 10.8334 4.62688 10.8334 4.16665C10.8334 3.70641 10.4603 3.33331 10.0001 3.33331C9.53984 3.33331 9.16675 3.70641 9.16675 4.16665C9.16675 4.62688 9.53984 4.99998 10.0001 4.99998Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.66667"
        />
        <path
          d="M10.0001 16.6666C10.4603 16.6666 10.8334 16.2935 10.8334 15.8333C10.8334 15.3731 10.4603 15 10.0001 15C9.53984 15 9.16675 15.3731 9.16675 15.8333C9.16675 16.2935 9.53984 16.6666 10.0001 16.6666Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.66667"
        />
      </svg>
    </div>
    <div
      class="chakra-stack css-s2mkdb"
    >
      <div
        class="chakra-stack css-i1m1ot"
      >
        <p
          class="chakra-text css-g89h0y"
        >
          $1,000
        </p>
        <div
          class="chakra-stack css-bjqmq7"
        >
          <svg
            class="chakra-icon css-13otjrl"
            fill="none"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 4.16669V15.8334M10 15.8334L15.8333 10M10 15.8334L4.16667 10"
              stroke="#DC180C"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <p
            class="chakra-text css-1vqbz9l"
          >
            -5
            %
          </p>
          <p
            class="chakra-text css-m6obuh"
          >
            Last viewed: 1 hour ago
          </p>
        </div>
      </div>
    </div>
    <button
      class="chakra-button css-1i9b51t"
      type="button"
    >
      View details
    </button>
  </div>
</div>
`;

exports[`Metrics renders correctly with positive metric change 1`] = `
<div>
  <div
    border-radius="8px"
    class="css-vi7wl0"
  >
    <div
      class="chakra-stack css-1a8w4xd"
    >
      <div
        class="chakra-stack css-84zodg"
      >
        <p
          class="chakra-text css-0"
        >
          Revenue
        </p>
      </div>
      <svg
        class="chakra-icon chakra-icon css-1gg9e9r"
        focusable="false"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.0001 10.8333C10.4603 10.8333 10.8334 10.4602 10.8334 9.99998C10.8334 9.53974 10.4603 9.16665 10.0001 9.16665C9.53984 9.16665 9.16675 9.53974 9.16675 9.99998C9.16675 10.4602 9.53984 10.8333 10.0001 10.8333Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.66667"
        />
        <path
          d="M10.0001 4.99998C10.4603 4.99998 10.8334 4.62688 10.8334 4.16665C10.8334 3.70641 10.4603 3.33331 10.0001 3.33331C9.53984 3.33331 9.16675 3.70641 9.16675 4.16665C9.16675 4.62688 9.53984 4.99998 10.0001 4.99998Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.66667"
        />
        <path
          d="M10.0001 16.6666C10.4603 16.6666 10.8334 16.2935 10.8334 15.8333C10.8334 15.3731 10.4603 15 10.0001 15C9.53984 15 9.16675 15.3731 9.16675 15.8333C9.16675 16.2935 9.53984 16.6666 10.0001 16.6666Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.66667"
        />
      </svg>
    </div>
    <div
      class="chakra-stack css-s2mkdb"
    >
      <div
        class="chakra-stack css-i1m1ot"
      >
        <p
          class="chakra-text css-g89h0y"
        >
          $1,000
        </p>
        <div
          class="chakra-stack css-bjqmq7"
        >
          <svg
            class="chakra-icon css-13otjrl"
            fill="none"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 15.8334V4.16669M10 4.16669L4.16666 10M10 4.16669L15.8333 10"
              stroke="#00C408"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <p
            class="chakra-text css-1c6sp0k"
          >
            5
            %
          </p>
          <p
            class="chakra-text css-m6obuh"
          >
            Last viewed: 1 hour ago
          </p>
        </div>
      </div>
    </div>
    <button
      class="chakra-button css-1i9b51t"
      type="button"
    >
      View details
    </button>
  </div>
</div>
`;
